# chuck

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  chuck_aider.py  chuck_aider_init.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py  ci_pipeline.py  claude_code.py  multi_context.py
src/chuck/: __init__.py  chunker.py  cli.py  context.py  core.py  digest.py  hasher.py  ignore.py  snapshot.py  tokens.py
tests/: test_chunker.py  test_context.py  test_context_selection.py  test_core.py  test_digest.py  test_ignore.py  test_launcher_flags.py  test_snapshot.py  test_tokens.py
tests/fixtures/sample_project/: README.md
tests/fixtures/sample_project/src/: main.py  utils.py
